# QUD

./: .gitignore  CLAUDE.md  Data Layers Deeply Detailed Prompt.md  README.md  amaaken_words_project_content_20251012111051.csv  pyproject.toml  requirements.txt
.claude/: settings.local.json
.obsidian/: workspace.json
QUD Presentation Layer/: keynote_slides_export.002.md  keynote_slides_export.003.md  keynote_slides_export.006.md  keynote_slides_export.011.md  keynote_slides_export.014.md  keynote_slides_export.020.md  keynote_slides_export.026.md  keynote_slides_export.031.md  keynote_slides_export.043.md  keynote_slides_export.046.md  keynote_slides_export.047.md  keynote_slides_export.056.md  keynote_slides_export.057.md  keynote_slides_export.058.md  keynote_slides_export.062.md  keynote_slides_export.067.md  keynote_slides_export.068.md  keynote_slides_export.073.md  keynote_slides_export.075.md  keynote_slides_export.078.md  keynote_slides_export.082.md  keynote_slides_export.086.md  keynote_slides_export.088.md  keynote_slides_export.091.md  keynote_slides_export.095.md  keynote_slides_export.101.md  keynote_slides_export.102.md  keynote_slides_export.103.md  keynote_slides_export.104.md  keynote_slides_export.111.md  keynote_slides_export.117.md  keynote_slides_export.129.md  keynote_slides_export.134.md  keynote_slides_export.137.md  keynote_slides_export.145.md  (+2 more)
QUD Presentation Layer Outline/: 07 - الشريحة السابعة.md  08 - الشريحة الثامنة.md  09 - الشريحة التاسعة.md  10 - الشريحة العاشرة.md  16 - الشريحة السادسة عشرة.md  18 - الشريحة الثامنة عشرة.md
(+328 files in other folders)
