[project]
name = "qud-research"
version = "0.1.0"
description = "Quranic Data Layer Architecture Research Project"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "jsonschema>=4.17.0",
    "pydantic>=2.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
